# Colon-Cancer-Prediction

./: Makefile  README.md  pyproject.toml
colon_cancer_prediction/: __init__.py  dataset.py  features.py  plots.py
colon_cancer_prediction/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Colorectal_Cancer_Data_Wrangling.ipynb  Test.ipynb
