[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "colon_cancer_prediction"
version = "0.0.1"
description = "Predicting Colorectal Cancer Outcomes Based on Global Health Trends"
authors = [
  { name = "Sanjay Patel" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"


[tool.ruff]
line-length = 99
src = ["colon_cancer_prediction"]
include = ["pyproject.toml", "colon_cancer_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["colon_cancer_prediction"]
force-sort-within-sections = true

